--- a/AdvancedForms/AdvancedForms.csproj
+++ b/AdvancedForms/AdvancedForms.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Assets\" />
+    <Folder Include="Controllers\" />
     <Folder Include="wwwroot\Styles\" />
     <Folder Include="wwwroot\Scripts\" />
   </ItemGroup>
@@ -21,11 +22,19 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0-preview2-35157" />
     <PackageReference Include="OrchardCore.Admin.Abstractions" Version="1.0.0-beta2-67846" />
+    <PackageReference Include="OrchardCore.ContentManagement" Version="1.0.0-beta2-67846" />
+    <PackageReference Include="OrchardCore.ContentManagement.Display" Version="1.0.0-beta2-67846" />
+    <PackageReference Include="OrchardCore.ContentTypes.Abstractions" Version="1.0.0-beta2-67846" />
     <PackageReference Include="OrchardCore.Environment.Navigation" Version="1.0.0-beta2-67846" />
     <PackageReference Include="OrchardCore.Module.Targets" Version="1.0.0-beta2-67846" />
-    <PackageReference Include="OrchardCore.Mvc.Core" Version="1.0.0-beta2-67846" />
+    <PackageReference Include="OrchardCore.Mvc.Abstractions" Version="1.0.0-beta2-67846" />
+    <PackageReference Include="OrchardCore.ResourceManagement" Version="1.0.0-beta2-67846" />
+    <PackageReference Include="OrchardCore.Scripting.Abstractions" Version="1.0.0-beta2-67846" />
     <PackageReference Include="OrchardCore.Security" Version="1.0.0-beta2-67846" />
     <PackageReference Include="OrchardCore.Security.Abstractions" Version="1.0.0-beta2-67846" />
+    <PackageReference Include="OrchardCore.Settings" Version="1.0.0-beta2-67846" />
+    <PackageReference Include="OrchardCore.Users.Abstractions" Version="1.0.0-beta2-67846" />
+    <PackageReference Include="OrchardCore.Workflows.Abstractions" Version="1.0.0-beta2-67846" />
   </ItemGroup>
 
 </Project>
